--- a/src/styles/objects/_buttons.scss
+++ b/src/styles/objects/_buttons.scss
@@ -1,7 +1,7 @@
 // SIMPLE BUTTON UNDERLINED LINK LAYOUT
 .o-btn-simple {
   font-weight: 400;
-  font-size: 1em;
+  font-size: 90%;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   color: lighten($dark-grey, 30%);
